# howl-server

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  Dockerfile.deploy  Dockerfile.notifications.deploy  Dockerfile.webserver.deploy  Dockerrun.aws.json.template  Procfile  README.md  app.cfg  bucket-policy.json  deploy.sh  howl-backend.cabal  mockApp.cfg  pack-and-deploy.sh  setup.sh  sqlite.db-shm  sqlite.db-wal  stack.yaml  swagger-generated.json  swagger.json  tests.cfg
.ebextensions/: 01_logstash_files.config  02_webserver_logstash.config  03_logstash.config  0_logstash_files.config   1_webserver_logstash.config  2_logstash.config
app/: Api.hs  App.hs  Main.hs  Models.hs  NotificationService.hs  Swagger.hs  Types.hs  Utils.hs
app/Facebook/: Persistent.hs
src/: Howl.hs
src/Howl/: Api.hs  App.hs  Downloader.hs  Facebook.hs  Logger.hs  Message.hs  Models.hs  Monad.hs  Notifications.hs  Queue.hs  Types.hs  Utils.hs
src/Howl/Api/: Common.hs  Events.hs  Search.hs  Static.hs  Users.hs  Venues.hs
src/Howl/App/: Common.hs  Events.hs  Search.hs  Static.hs  Users.hs  Venues.hs
src/Howl/Facebook/: Auth.hs  Base.hs  FQL.hs  Graph.hs  Monad.hs  Pager.hs  Persistent.hs  RealTime.hs  TestUsers.hs  Types.hs
src/Howl/Facebook/Object/: Action.hs  Checkin.hs  Event.hs  FriendList.hs  Order.hs  Page.hs  User.hs
test/: ApiTests.hs  EventsApiTests.hs  FacebookTests.hs  FbTests.hs  Setup.hs  SwaggerSpec.hs  Tests.hs  TestsCommon.hs  UsersApiTests.hs  VenueApiTests.hs
