name:                howl-backend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://gitlab.com/smendez/howl-backend
license:             BSD3
license-file:        LICENSE
author:              Sebastian Mendez Siem
maintainer:          sebas.chinoir@gmail.com
-- copyright:
data-files: swagger.json, swagger-generated.json
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Howl
                     , Howl.Api
                     , Howl.Api.Users
                     , Howl.Api.Events
                     , Howl.Api.Venues
                     , Howl.App
                     , Howl.App.Common
                     , Howl.App.Users
                     , Howl.App.Events
                     , Howl.App.Venues
                     , Howl.Facebook
                     , Howl.Facebook.Object.Event
                     , Howl.Facebook.Monad
                     , Howl.Facebook.Persistent
                     , Howl.Facebook.Types
                     , Howl.Facebook.Base
                     , Howl.Facebook.Auth
                     , Howl.Facebook.FQL
                     , Howl.Facebook.Graph
                     , Howl.Facebook.Object.Action
                     , Howl.Facebook.Object.Checkin
                     , Howl.Facebook.Object.FriendList
                     , Howl.Facebook.Object.Order
                     , Howl.Facebook.Object.Page
                     , Howl.Facebook.Object.User
                     , Howl.Facebook.Pager
                     , Howl.Facebook.RealTime
                     , Howl.Facebook.TestUsers
                     , Howl.Models
                     , Howl.Monad
                     , Howl.Types
                     , Howl.Utils
                     , Howl.Logger
  build-depends:       base
                     , ansi-terminal
                     , base64-bytestring
                     , base16-bytestring
                     , cereal
                     , http-conduit
                     , conduit
                     , conduit-extra
                     , crypto-api
                     , cryptohash-cryptoapi
                     , either
                     , esqueleto
                     , fast-logger
                     , http-types
                     , lifted-base
                     , attoparsec
                     , data-default
                     , directory
                     , servant
                     , servant-server
                     , transformers
                     , monad-logger
                     , monad-control
                     , mtl
                     , string-conversions
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , servant-swagger
                     , swagger2
                     , bytestring
                     , lens
                     , aeson
                     , aeson-casing
                     , bytestring
                     , text
                     , transformers-base
                     , time
                     , unordered-containers
                     , wai
                     , warp
  default-extensions:
    DeriveDataTypeable
    EmptyDataDecls
    OverloadedStrings
    GADTs
    StandaloneDeriving
    ScopedTypeVariables
    GeneralizedNewtypeDeriving
    TypeFamilies
    FlexibleInstances
    MultiParamTypeClasses
  default-language:    Haskell2010

executable howl-backend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhpc
  other-modules:
  build-depends:       base
                     , howl-backend
                     , configurator
                     , conduit
                     , http-conduit
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , string-conversions
                     , wai
                     , warp
  default-language:    Haskell2010


-- executable howl-swagger
--   hs-source-dirs:      app
--   main-is:             Swagger.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   other-modules:
--   build-depends:       base
--                      , aeson
--                      , aeson-pretty
--                      , howl-backend
--                      , servant-swagger
--                      , swagger2
--                      , bytestring
--                      , lens
--                      , text
--   default-language:    Haskell2010

test-suite howl-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , configurator
                     , howl-backend
                     , fb
                     , cereal
                     , containers
                     , conduit
                     , http-conduit
                     , directory
                     , servant
                     , servant-server
                     , servant-client
                     , lifted-base
                     , data-default
                     , transformers
                     , monad-logger
                     , monad-control
                     , string-conversions
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , aeson
                     , bytestring
                     , text
                     , time
                     , wai
                     , warp
                     , QuickCheck
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , HUnit
                     , hspec
                     , http-client
                     , http-types
                     , hspec-wai
                     , hspec-wai-json
                     , optparse-generic
  ghc-options:         -fhpc
  default-language:    Haskell2010

test-suite swagger-server-spec
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    SwaggerSpec
    Paths_howl_backend
  build-depends:    base
                  , aeson >=0.11.2.0
                  , bytestring
                  , howl-backend
                  , hspec
                  , servant-swagger
                  , QuickCheck
                  , quickcheck-instances
                  , swagger2
                  , lens
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/smendez/howl-backend
